# Generated by Django 5.0.6 on 2026-07-09 03:46

import django.db.models.deletion
import simple_history.models
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('samples', '0001_initial'),
        ('testing', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='HistoricalInvestigation',
            fields=[
                ('id', models.BigIntegerField(blank=True, db_index=True)),
                ('type', models.CharField(choices=[('oos', 'Out of Specification'), ('oot', 'Out of Trend')], max_length=8)),
                ('root_cause', models.TextField(blank=True)),
                ('capa_actions', models.TextField(blank=True, help_text='Corrective and Preventive Action description.')),
                ('status', models.CharField(choices=[('open', 'Open'), ('root_cause_identified', 'Root Cause Identified'), ('capa_in_progress', 'CAPA In Progress'), ('closed', 'Closed')], default='open', max_length=32)),
                ('opened_at', models.DateTimeField(blank=True, editable=False)),
                ('closed_at', models.DateTimeField(blank=True, null=True)),
                ('history_id', models.AutoField(primary_key=True, serialize=False)),
                ('history_date', models.DateTimeField(db_index=True)),
                ('history_change_reason', models.CharField(max_length=100, null=True)),
                ('history_type', models.CharField(choices=[('+', 'Created'), ('~', 'Changed'), ('-', 'Deleted')], max_length=1)),
                ('history_user', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL)),
                ('opened_by', models.ForeignKey(blank=True, db_constraint=False, null=True, on_delete=django.db.models.deletion.DO_NOTHING, related_name='+', to=settings.AUTH_USER_MODEL)),
                ('related_sample', models.ForeignKey(blank=True, db_constraint=False, help_text='Populated when the investigation originates from an Approver rejection rather than an OOS TestResult.', null=True, on_delete=django.db.models.deletion.DO_NOTHING, related_name='+', to='samples.sample')),
                ('related_test_result', models.ForeignKey(blank=True, db_constraint=False, null=True, on_delete=django.db.models.deletion.DO_NOTHING, related_name='+', to='testing.testresult')),
            ],
            options={
                'verbose_name': 'historical investigation',
                'verbose_name_plural': 'historical investigations',
                'ordering': ('-history_date', '-history_id'),
                'get_latest_by': ('history_date', 'history_id'),
            },
            bases=(simple_history.models.HistoricalChanges, models.Model),
        ),
        migrations.CreateModel(
            name='Investigation',
            fields=[
                ('id', models.BigAutoField(primary_key=True, serialize=False)),
                ('type', models.CharField(choices=[('oos', 'Out of Specification'), ('oot', 'Out of Trend')], max_length=8)),
                ('root_cause', models.TextField(blank=True)),
                ('capa_actions', models.TextField(blank=True, help_text='Corrective and Preventive Action description.')),
                ('status', models.CharField(choices=[('open', 'Open'), ('root_cause_identified', 'Root Cause Identified'), ('capa_in_progress', 'CAPA In Progress'), ('closed', 'Closed')], default='open', max_length=32)),
                ('opened_at', models.DateTimeField(auto_now_add=True)),
                ('closed_at', models.DateTimeField(blank=True, null=True)),
                ('opened_by', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='opened_investigations', to=settings.AUTH_USER_MODEL)),
                ('related_sample', models.ForeignKey(blank=True, help_text='Populated when the investigation originates from an Approver rejection rather than an OOS TestResult.', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='investigations', to='samples.sample')),
                ('related_test_result', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='investigations', to='testing.testresult')),
            ],
            options={
                'db_table': 'investigation',
                'ordering': ['-opened_at'],
                'indexes': [models.Index(fields=['status'], name='investigati_status_a16f48_idx')],
            },
        ),
    ]
